--- a/01_OnepieceTower/index.html
+++ b/01_OnepieceTower/index.html
@@ -16,7 +16,7 @@
     <!-- 2. 把左邊的袋子放入foreign_parts_left.png；右邊的袋子，放入10張logo_01.png-->
     <!-- (放入10張logo_01.png是為了撐大袋子，看一下畫面比例) -->
 
-    <!-- 3. 如何固定住左邊的區塊? -->
+    <!-- 3. 如何固定住左邊的區塊?? -->
 
     <!-- 4. 如何調整元素位置? (position) -->
 
