--- a/02_MyCalculator/index.html
+++ b/02_MyCalculator/index.html
@@ -6,126 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Document</title>
+        <link rel="stylesheet" href="./MyCalculator.css">
         <style>
-            #div_all {
-                position: relative;
-                left: 400px;
-                width: 351px;
-                border: 2px solid black;
-                background-color: rgb(228, 203, 207);
-                user-select: none;
-            }
 
-            #div_show {
-                border: 2px solid black;
-                width: 350px;
-                height: 90px;
-            }
-
-            #show_1 {
-                border: 2px solid black;
-                width: 350px;
-                height: 50%;
-                text-align: right;
-                font-size: 2rem;
-                padding: -20px;
-                word-break: break-all;
-            }
-
-            #show_2 {
-                border: 2px solid black;
-                width: 350px;
-                height: 50%;
-                text-align: right;
-                font-size: 2rem;
-            }
-
-            #div_show>p {
-                width: 100%;
-                height: 50px;
-                font-size: 2rem;
-                text-align: right;
-                margin-left: -10px;
-            }
-
-            #div_button {
-                border: 3px solid black;
-                border-top: 5px solid black;
-                width: 350px;
-                height: 450px;
-            }
-
-            .number>span {
-                display: inline-block;
-                font-size: 2rem;
-                width: 40px;
-                height: 40px;
-                border: 2px solid white;
-                margin-top: 30px;
-                margin-left: 15px;
-                padding: 10px;
-                text-align: center;
-                box-shadow: 1px 1px rgba(20%, 20%, 40%, 0.5);
-            }
-
-            .number>span:hover {
-                border: 2px solid black;
-                cursor: pointer;
-                background-color: black;
-                color: white;
-            }
-
-            .number>span:active {
-                background-color: darkgray;
-            }
-
-            .symbol>span {
-                display: inline-block;
-                font-size: 2rem;
-                width: 40px;
-                height: 40px;
-                border: 2px solid white;
-                position: relative;
-                bottom: 376px;
-                left: 250px;
-                text-align: center;
-                margin-top: 30px;
-                margin-left: 10px;
-                padding: 10px;
-                box-shadow: 1px 1px brown
-            }
-
-            .symbol>span:hover {
-                background-color: brown;
-                cursor: pointer;
-            }
-
-            .symbol>span:active {
-                background-color: darkred;
-            }
-
-            .clean {
-                display: inline-block;
-                font-size: 2rem;
-                width: 295px;
-                height: 40px;
-                border: 2px solid white;
-                margin-top: 10px;
-                margin-left: 15px;
-                margin-bottom: -20px;
-                padding: 10px;
-                text-align: center;
-                box-shadow: 1px 1px rgba(20%, 20%, 40%, 0.5);
-            }
-
-            .clean:hover {
-                background-color: greenyellow;
-                cursor: pointer;
-            }
-
-            .clean:active {
-                background-color: green;
-            }
         </style>
     </head>
 
@@ -171,103 +54,148 @@
         <script>
             window.onload = function () {
                 var span_all = document.getElementsByTagName("span");
-                var show_1 = document.getElementById("show_1");
-                var show_2 = document.getElementById("show_2");
-                var data = new Array();
+                var show_1 = document.getElementById("show_1");  //顯示使用者計算的紀錄
+                var show_2 = document.getElementById("show_2");  //計算結果
+                var clean = document.getElementsByClassName("clean")[0]; //清除所有 AC 鍵盤
+                var data = new Array();  //儲存使用者的數字
+                var number_length = 15;  //計算機最大位數
+                var body = document.getElementsByTagName("body")[0];
                 for (let i = 0; i < span_all.length; i++) {
-                    span_all[i].addEventListener("click", function (ev) {
-                        if (show_1.innerHTML.length > 14) {
-                            return false;
-                        }
+                    span_all[i].addEventListener("click", function (ev) { 
                         var row = this.innerHTML;
-                        if (row !== "=") {
-                            show_1.innerHTML += row;
-                            data.push(row);
+                        // if (row !== "=") {
+                        //     show_1.innerHTML += row;
+                        //     data.push(row);
+                        // }
+                        switch (row) {  //遇到四則運算符號清空show_1
+                            case "+":s1_Ope(row,data);
+                                break;
+                            case "-":s1_Ope(row,data);
+                                break;
+                            case "*":s1_Ope(row,data);
+                                break;
+                            case "/":s1_Ope(row,data);
+                                break;
+                            case "=":return false;
+                                break;
+                            default:
+                                show_1.innerHTML += row;
+                                data.push(row);
                         }
-
+                        if (show_1.innerHTML.length > 14) {
+                             return false;
+                         }
                     })
                 }
-                document.getElementById("result").addEventListener("click", function () {
-                    var merge = data.join("");
-                    if (isNaN(data[data.length - 1])) {
-                        alert("運算是錯誤")
-                        return false;
-                    }
-                    var answer = eval(merge)
-                    if (answer) {
-                        document.getElementById("show_2").innerHTML = answer.toFixed(2)
-                    } else {
-                        alert("運算是錯誤")
-                        return false;
-                    }
 
-
-                })
-
-                document.getElementsByClassName("clean")[0].addEventListener("click", function () {
+                clean.addEventListener("click", function () {   //按下AC鍵後清除顯示並把陣列清空
                     data = [];
                     show_1.innerHTML = show_2.innerHTML = "";
 
                 })
 
-                document.getElementsByTagName("body")[0].addEventListener("keydown", function (ev) {
-                    if (show_1.innerHTML.length < 15) {
-                        switch (ev.keyCode) {
+                body.addEventListener("keydown", function (ev) {
+                    if (show_1.innerHTML.length < number_length) {
+                        switch (ev.keyCode) { //keydown 鍵盤對應
                             case 49:
-                                show_1.innerHTML += "1";
-                                data.push("1");
+                                kdownPush(1, data) ? true : kderror();
                                 break;
                             case 50:
-                                show_1.innerHTML += "2";
-                                data.push("2");
+                                kdownPush(2, data) ? true : kderror();
                                 break;
                             case 51:
-                                show_1.innerHTML += "3";
-                                data.push("3");
+                                kdownPush(3, data) ? true : kderror();
                                 break;
                             case 52:
-                                show_1.innerHTML += "4";
-                                data.push("4");
+                                kdownPush(4, data) ? true : kderror();
                                 break;
                             case 53:
-                                show_1.innerHTML += "5";
-                                data.push("5");
+                                kdownPush(5, data) ? true : kderror();
                                 break;
                             case 54:
-                                show_1.innerHTML += "6";
-                                data.push("6");
+                                kdownPush(6, data) ? true : kderror();
                                 break;
                             case 55:
-                                show_1.innerHTML += "7";
-                                data.push("7");
+                                kdownPush(7, data) ? true : kderror();
                                 break;
                             case 56:
-                                show_1.innerHTML += "8";
-                                data.push("8");
+                                kdownPush(8, data) ? true : kderror();
                                 break;
                             case 57:
-                                show_1.innerHTML += "9";
+                                kdownPush(9, data) ? true : kderror();
                                 break;
                             case 48:
-                                show_1.innerHTML += "0";
-                                data.push("0");
+                                kdownPush(0, data) ? true : kderror();
                                 break;
                             default:
                                 false;
                         }
                     }
                     switch (ev.keyCode) {
-                        case 27:
+                        case 27:   //esc 除所有及清空陣列
                             show_1.innerHTML = show_2.innerHTML = "";
                             data = [];
-                        case 8:
+                        case 8:  //backspace  彈出陣列最後一個元素及截取到字串的倒數第二個字
                             show_1.innerHTML = show_1.innerHTML.slice(0, -1)
                             data.pop();
                         default:
                             false;
                     }
                 })
+
+                document.getElementById("result").addEventListener("click", function () {
+                    var merge = data.join("");
+                    if (isNaN(data[data.length - 1])) { //判斷data陣列最後的元素是不是數字
+                        alert("運算是錯誤")
+                        return false;
+                    }
+                    var answer = eval(merge)
+                    if (answer !== false) {   // 判斷運算事是否成立
+                        document.getElementById("show_2").innerHTML = addComma(answer);
+                        data = [];
+                        data.push(answer)
+                        console.log(data);
+                    } else {
+                        alert("運算是錯誤")
+                        return false;
+                    }
+                })
             }
+
+            function addComma(str) { //加入計算結果3位一逗號
+                str = String(str); //將傳入的參數轉為字串
+                var data = "";
+                var length = -3;
+                while (str.length > 3) {  //當原字串長度小於3時則停止
+                    data = "," + str.slice(length) + data; //每次截倒數3個字,並在前方加入逗號傳入data
+                    str = str.slice(0, length)  //原字串被截後重新覆蓋被截後的字串
+                }
+                data = str += data;
+                return data
+            }
+
+            function kdownPush(num, arr) {  //將鍵盤事件對應的數字加入data陣列及show_1
+                var number = String(num);
+                var arrlength = arr.length;
+                show_1.innerHTML += number;
+                arr.push(number)
+                if (arr.length > arrlength) {
+                    return true;
+                } else {
+                    return false;
+                }
+            }
+
+            function kderror() {  //鍵盤事件錯誤提示
+                var message = "錯誤";
+                alert(message);
+            }
+
+            function s1_Ope(ope,arr){  //當畫面中的 + - * / 點擊後清空show_1
+                show_1.innerHTML = "";
+                arr.push(ope);
+            }
+
         </script>
     </body>
 
